2002-11-21  Vincent Untz  <vincent@vuntz.net>

	* voters.html: sorted the list alphabetically and removed the
	contribution (they are in membership-list.html)

2002-11-21  Vincent Untz  <vincent@vuntz.net>

	* voters.html: corrected Patrick Costello's e-mail address

2002-11-20  Vincent Untz  <vincent@vuntz.net>

	* index.html: corrected the date

2002-11-20  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary-2001.html
	* election-2000.html
	* election-2001.html
	* electionrules-2001.html
	* electionrules.html
	* elections.html
	* membership-form.php
	* overview.html
	* voters.html (new): added the list of voters for the elections
	* election-2000.html
	* election-2001.html: removed bad link for the list of voters of
	past elections
	* membership-list.html: updated the membership list
	* membership-policy.html
	* membership.html
	* membership-form.php: added links to the membership list
	* index.html: added a news about the elections

2002-11-11  Vincent Untz  <vincent@vuntz.net>

	* membership-policy.html: added a link to the new guidelines.

2002-11-07  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: updated Nat's summary.

2002-11-06  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: updated Jeff's affiliation.

2002-11-06  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: final list.

2002-11-06  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: fixed the numbers.

2002-11-06  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: added Jim Gettys and some affiliations.

2002-11-05  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: updated Jonathan's summary.

2002-11-05  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: new candidates.

2002-11-04  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: we have 11 candidates now. Fixed two typos.

2002-11-03  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: another candidate.

2002-11-03  Vincent Untz  <vincent@vuntz.net>
