@@ -1,7 +1,7 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
  <head>
-  <title>The GNOME Foundation: Membership List</title>
+  <title>The GNOME Foundation: List of voters (2002 elections)</title>
  </head>
  <body bgcolor="#FFFFFF">
   <center>
@@ -23,16 +23,19 @@
        <a href="press.html">Press</a> :&nbsp;
        <a href="organization.html">Organization</a> :&nbsp;
        <a href="documentation.html">Documentation</a> :&nbsp;
-       Membership :&nbsp;
-       <a href="elections.html">Elections</a> :&nbsp;
+       <a href="membership.html">Membership</a> :&nbsp;
+       Elections :&nbsp;
        <a href="directory.html">Directory</a>
       </center>
       <br>
       <center>
-       <a href="membership.html">Membership Information</a> :&nbsp;
-       <a href="membership-policy.html">Membership Policy</a> :&nbsp;
-       Membership List :&nbsp;
-       <a href="membership-form.php">Membership Application</a>
+       <a href="elections.html">General Information</a> :&nbsp;
+       <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
+       <a href="ballot-summary.html">List of candidates</a> :&nbsp;
+       List of voters :&nbsp;
+       <a href="overview.html">Director Overview</a> :&nbsp;
+       <a href="election-2000.html">2000</a> :&nbsp;
+       <a href="election-2001.html">2001</a>
       </center>
      </td>
     </tr>
@@ -42,10 +45,10 @@
     <tr>
      <td>
  <p>
-  Send comments, questions, and updates to <a href="mailto:membership-committee@gnome.org">membership-committee@gnome.org</a>.
+  Send comments, questions, and updates to <a href="mailto:elections@gnome.org">elections@gnome.org</a>.
  </p>
  <p>
-  Current members:
+  Voters for the 2002 GNOME Foundation elections:
  </p>
  <ul> 
   <li>
@@ -1426,7 +1429,7 @@
  </ul> 
  
  <p>
- 275 members
+ 275 voters
  </p>
  
 </td>
